# Identifiable-SDS-rs

./: .gitignore  Cargo.toml  README.md  train.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/snlds-core/: Cargo.toml  README.md
crates/snlds-core/src/: hmm.rs  lib.rs
crates/snlds-data/: Cargo.toml  README.md
crates/snlds-data/src/: generate.rs  io.rs  lib.rs  polynomial.rs  render.rs  transitions.rs
crates/snlds-data/tests/: integration.rs
crates/snlds-eval/: Cargo.toml  README.md
crates/snlds-eval/src/: accuracy.rs  lib.rs
crates/snlds-eval/tests/: smoke.rs
crates/snlds-model/: Cargo.toml  README.md
crates/snlds-model/src/: cnn.rs  flow_snlds.rs  lib.rs  mlp.rs  model.rs  switching.rs  tests.rs
crates/snlds-model/src/npca/: flatten.rs  geometry.rs  householder.rs  mod.rs  neural_pca.rs  pca_batchnorm.rs  pca_rotate.rs  prior.rs
crates/snlds-model/tests/: flow_snlds_forward.rs  npca_integration.rs
crates/snlds-msm/: Cargo.toml  README.md
crates/snlds-msm/src/: lib.rs  msm.rs  pca.rs  transfer.rs
crates/snlds-msm/tests/: smoke.rs
crates/snlds-train/: Cargo.toml  README.md  train.example.toml
crates/snlds-train/src/: checkpoint_recon.rs  config_file.rs  data.rs  flow_train.rs  lib.rs  snapshot.rs  train.rs  training_log.rs  warm_start.rs
crates/snlds-train/tests/: smoke.rs
crates/snlds-viz/: Cargo.toml  README.md
crates/snlds-viz/src/: colormap.rs  lib.rs  log.rs  render.rs
crates/snlds-viz/tests/: smoke.rs
docs/: AGENT_WORK_SPLIT.md  CLEANUP-hardcoded-values.md  M-Viz+.md  M-Viz.md  M0.md  M1.md  M2.md  M3.md  M4.md  M5.md  M6.md  PRD-burn-port.md
