[package]
name = "snlds-data"
version = "0.1.0"
edition = "2021"
description = "Synthetic SDS/SNLDS data generation (parity with identifiable-SDS Python)"

[dependencies]
anyhow = "1"
bytemuck = "1"
itertools = "0.13"
ndarray = { version = "0.16", features = ["std"] }
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[features]
default = ["cli"]
cli = ["dep:clap"]

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "snlds-gen"
path = "src/bin/snlds-gen.rs"
required-features = ["cli"]
