[package]
name = "snlds-msm"
version = "0.1.0"
edition = "2021"

[dependencies]
snlds-core = { path = "../snlds-core" }
snlds-model = { path = "../snlds-model" }
burn = { version = "0.20.1", features = ["ndarray", "autodiff"] }
ndarray = { version = "0.16", features = ["std"] }
linfa = "0.8"
linfa-reduction = "0.8"
anyhow = "1"
rand = "0.9"

[dev-dependencies]
snlds-data = { path = "../snlds-data" }
tempfile = "3"
