[package]
name = "snlds-train"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snlds-train"
path = "src/bin/snlds-train.rs"

[dependencies]
snlds-model = { path = "../snlds-model" }
snlds-data = { path = "../snlds-data" }
snlds-msm = { path = "../snlds-msm" }
burn = { version = "0.20.1", features = ["ndarray", "autodiff"] }
ndarray = { version = "0.16", features = ["std"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
